<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    tools:context=".ui.login.fragments.RegisterFragment">

    <TextView
        android:id="@+id/userData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_user_data"
        android:textColor="@color/poor_black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:alpha="0.6"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/register_text"
        android:textColor="@color/poor_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userData" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/nameCard"
        style="@style/registerCardStyle"
        app:shapeAppearanceOverlay="@style/registerCardStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/name"
        app:helperText="@string/required"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegister">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:maxLength="15"
            android:hint="@string/name"
            android:paddingStart="12dp"
            android:textColor="@color/poor_black"
            android:textColorHint="@color/grey_85"
            android:background="@color/poor_white"
            android:textCursorDrawable="@drawable/shape_cursor_login" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        style="@style/registerCardStyle"
        android:id="@+id/surnameCard"
        app:shapeAppearanceOverlay="@style/registerCardStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameCard">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSurname"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:maxLength="15"
            android:paddingStart="12dp"
            android:textColor="@color/poor_black"
            android:textColorHint="@color/grey_85"
            android:background="@color/poor_white"
            android:hint="@string/surname"
            android:textCursorDrawable="@drawable/shape_cursor_login" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bRegister"
        style="@style/nextButtonStyle"
        android:layout_width="52dp"
        android:layout_height="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surnameCard" />

</androidx.constraintlayout.widget.ConstraintLayout>