<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    tools:context=".ui.login.fragments.VerifyNumberFragment">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/enter_code"
        android:textColor="@color/poor_black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <TextView
        android:id="@+id/tvOnPhoneSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        android:gravity="center"
        android:text="@string/sent_message"
        android:textColor="@color/poor_black"
        android:alpha="0.6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/verifyCard"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_marginTop="60dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/poor_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOnPhoneSend"
        app:layout_constraintVertical_bias="0.031">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etVerifyPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="_ _ _ _ _ _"
            android:maxLength="6"
            android:background="@color/poor_white"
            android:textCursorDrawable="@drawable/shape_cursor_login"
            android:inputType="number"
            app:hintTextColor="@color/grey_95" />
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/sendCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        android:layout_marginTop="20dp"
        android:alpha="0.6"
        app:cardBackgroundColor="@color/background_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyCard">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bSendAgain"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:padding="0dp"
            android:gravity="center"
            android:backgroundTint="@color/background_white"
            android:layout_gravity="center|start"
            android:stateListAnimator="@null"
            android:layout_marginEnd="52dp"
            android:text="@string/send_code_again"
            android:textAllCaps="false"
            android:textColor="@color/poor_black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/verifyCard" />

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:countDown="true"
            android:gravity="bottom|start"
            android:textColor="@color/poor_black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/open_sans_condensed_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bSendAgain"
            tools:layout_editor_absoluteY="330dp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bNext"
        style="@style/nextButtonStyle"
        android:layout_width="52dp"
        android:layout_height="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendCard" />


</androidx.constraintlayout.widget.ConstraintLayout>